--- a/config/database.yml
+++ b/config/database.yml
@@ -26,7 +26,14 @@ test:
 production:
   primary:
     <<: *default
-    database: storage/production.sqlite3
+    database: <%= ENV['DB_DATABASE'] %>
+    adapter: mysql2
+    encoding: utf8mb4
+    charset: utf8mb4
+    collation: utf8mb4_general_ci
+    host: <%= ENV['DB_HOST'] %>
+    username: <%= ENV['DB_USERNAME'] %>
+    password: <%= ENV['DB_PASSWORD'] %>
   cache:
     <<: *default
     database: storage/production_cache.sqlite3
